--- a/src/app/flashcards/components/datasets/datasets.component.html
+++ b/src/app/flashcards/components/datasets/datasets.component.html
@@ -7,7 +7,7 @@
   <mat-list>
     <mat-list-item *ngFor="let deck of getDecks()">
       {{ deck["name"] }}
-      {{ deck["numberOfCards"] }}
+      {{ deck["numberOfCards"] }} cards
     </mat-list-item>
   </mat-list>
 </div>
